--- a/spin.html
+++ b/spin.html
@@ -51,6 +51,9 @@
                     <h2>הציון הכולל שלך:</h2>
                     <div id="final-score" class="final-score">0</div>
                 </div>
+                <div class="therapist-message">
+                    <p>אנא הורד את קובץ ה-PDF ושתף אותו עם המטפל שלך לדיון בתוצאות.</p>
+                </div>
                 <div class="results-actions">
                     <button id="export-json-btn" class="btn btn-primary">ייצא כ-JSON</button>
                     <button id="export-pdf-btn" class="btn">ייצא כ-PDF</button>
