--- a/phq9.html
+++ b/phq9.html
@@ -120,7 +120,7 @@ const questionnaireConfig = {
         },
         {
             id: "q5",
-            text: "תיאבון מוגזם או אכילת יתר",
+            text: "חוסר תאבון או אכילת יתר",
             reverseScore: false
         },
         {
